--- a/client/src/style/reset.scss
+++ b/client/src/style/reset.scss
@@ -14,6 +14,12 @@
   padding: 0;
 }
 
+@mixin hide-scrollbar {
+  &::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 button {
   border: none;
 }
